# Windowing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Include/SA/Collections/: Windowing  Windowing_GLFW
Include/SA/Windowing/Base/: AInputInterface.hpp  AWindow.hpp  AWindowInterface.hpp  CursorMode.hpp  WindowCreateInfos.hpp  WindowMode.hpp
Include/SA/Windowing/GLFW/: GLFWInputInterface.hpp  GLFWWindow.hpp  GLFWWindowInterface.hpp
Source/SA/Windowing/Base/: AInputInterface.cpp  AWindow.cpp  AWindowInterface.cpp
Source/SA/Windowing/GLFW/: GLFWAPI.hpp  GLFWInputInterface.cpp  GLFWWindow.cpp  GLFWWindowInterface.cpp
Tests/: CMakeLists.txt
Tests/Prototype_All/: CMakeLists.txt  main.cpp
Tests/Prototype_Common/: CMakeLists.txt  main_common.cpp  main_common.hpp
Tests/Prototype_GLFW/: CMakeLists.txt  main.cpp
Tests/SCommon/: CMakeLists.txt
Tests/SCommon/Include/SCommon/: SelectedWindowInterface.hpp  WindowApplication.hpp
Tests/SCommon/Source/SCommon/: WindowApplication.cpp
Tests/UnitTests/: CMakeLists.txt
